--- a/package.json
+++ b/package.json
@@ -1,25 +1,29 @@
 {
-  "name": "vue_SSR",
-  "version": "1.0.0",
-  "private": true,
-  "scripts": {
-    "dev": "nuxt",
-    "build": "nuxt build",
-    "start": "nuxt start",
-    "generate": "nuxt generate"
-  },
-  "dependencies": {
-    "core-js": "^3.19.3",
-    "node-sass": "^7.0.1",
-    "nuxt": "^2.15.8",
-    "sass-loader": "^12.4.0",
-    "vue": "^2.6.14",
-    "vue-server-renderer": "^2.6.14",
-    "vue-template-compiler": "^2.6.14",
-    "webpack": "^4.46.0"
-  },
-  "devDependencies": {
-    "@nuxt/types": "^2.15.8",
-    "@nuxt/typescript-build": "^2.1.0"
-  }
+    "name": "vue_SSR",
+    "version": "1.0.0",
+    "private": true,
+    "scripts": {
+        "dev": "nuxt",
+        "build": "nuxt build",
+        "start": "nuxt start",
+        "generate": "nuxt generate",
+        "express": "cross-env && node server.js"
+    },
+    "dependencies": {
+        "bulma": "^0.9.3",
+        "core-js": "^3.19.3",
+        "express": "^4.17.3",
+        "node-sass": "^6.0.1",
+        "nuxt": "^2.15.8",
+        "sass-loader": "^10.1.0",
+        "vue": "^2.6.14",
+        "vue-server-renderer": "^2.6.14",
+        "vue-template-compiler": "^2.6.14",
+        "webpack": "^4.46.0"
+    },
+    "devDependencies": {
+        "@nuxt/types": "^2.15.8",
+        "@nuxt/typescript-build": "^2.1.0",
+        "cross-env": "^7.0.3"
+    }
 }
